fix: add overflow hidden to body

--- a/src/scripts/styles/main.less
+++ b/src/scripts/styles/main.less
@@ -1,10 +1,11 @@
 body {
   background-color: black;
   font-family: Monospace, serif;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 .game-canvas {
   display: inline-block;
